[package]
name = "run-tool"
version = "0.3.0"
license = "Apache-2.0"
description = "A multi-purpose tool to aid developers in executing common tasks."
readme = "README.md"
homepage = "https://github.com/enchant97/run-tool"
repository = "https://github.com/enchant97/run-tool"
keywords = ["cli", "automation", "devloper"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dotenvy = "0.15.7"
exitcode = "1.1.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
