[package]
name = "run-tool"
version = "0.5.0"
license = "Apache-2.0"
description = "A multi-purpose tool to aid developers in executing common tasks."
readme = "README.md"
homepage = "https://github.com/enchant97/run-tool"
repository = "https://github.com/enchant97/run-tool"
keywords = ["cli", "automation", "devloper"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
exitcode = "1.1"
log = "0.4"
notify-debouncer-mini = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.10"
simple_logger = { version = "5.0", default-features = false, features = ["colors"] }
